# easy-stress-rs

./: Cargo.toml  README.md  notes.md
.github/workflows/: artifact.yml
src/: README.md  components.rs  main.rs  prompt.rs  reporting.rs  sensors.rs  stressors.rs  work.rs
