[package]
name = "ezstress"
version = "2.0.3"
description = "A crossplatform, device agnostic, easy to use GPU and CPU stress test cli tool."
authors = ["Damon Montague Jr <damon@montague.im>"]
repository = "https://github.com/day-mon/easy-stress-rs"
homepage = "https://github.com/day-mon/easy-stress-rs"
license = "Unlicense"
edition = "2021"
readme = "README.md"
exclude = [
    "notes.md",
]

[dependencies]
inquire = "0.5.3"
sysinfo = "0.27.6"
colored = "2"
ocl = "0.19.4"
